# mai_oop_labs_2025

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
labs/lab1/: CMakeLists.txt  CTestTestfile.cmake  Lab1Tests  Makefile  cmake_install.cmake  main.cpp
labs/lab1/Testing/Temporary/: CTestCostData.txt
labs/lab1/headers/: filter_text.hpp
labs/lab1/src/: filter_text.cpp  filter_text.hpp
labs/lab1/tests/: tests.cpp
labs/lab2/: CMakeLists.txt  main.cpp
labs/lab2/headers/: array.hpp  seven.hpp
labs/lab2/src/: array.cpp  seven.cpp
labs/lab2/src/headers/: seven.hpp
labs/lab2/tests/: array_test.cpp  seven_test.cpp  test.cpp
lib/lab2/src/: seven.cpp
